2002-08-07  Ryan Nunn  <triforce@merlin.net.au>
	* cheat_screen.cc : Added missing tqueue header.

	* exultmenu.cc, audio/Midi.cc, audio/xmidi.h, 
	  gumps/AudioOptions_gump.cc : Added 'Music Conversion' option to
	  enable the FM Synth. Requires a restart of Exult once it has been
	  set in order for it to work.

	* gamewin.cc : Removed screen offset test that wasn't meant to be
	  committed

	* msvcstuff/*.*, audio/midi_drivers/win_midiout.cc : Doing some tests
	  compiling Exult using UNICODE

	* files/*.* : Some initial changes for PocketPC support

2002-08-06  Ryan Nunn  <triforce@merlin.net.au>
	* midi_drivers/fmopl*.* : Emulatled FM Synth. Compiling in by defining
	  USE_FMOPL_MIDI. Makefiles will probably need updating. Has a 'dual'
	  mode for stereo sound. Use "config/audio/midi/dual_opl" set to "yes"
	  or "no" to enable/disable it. Default is "yes". BG support is 'work
	  in progress', while SI is pretty much finished. Requires xmidi.ad and
	  u7voice.flx files.

	* audio/Audio.*, audio/Midi.*, audio/xmidi.h : For FM Synth.

	* bggame.cc, sigame.cc : FM Synth stuff, and fixing things that look
	  like they could be causing crashes.

	* cheat_screen.cc, audio/soundtest.cc : Will pause game when using
	  these

	* msvcstuff/*.* : 'Fixing' some precompiled header problems.

	* Lots of files : Added mode to allow the world to run when gumps are
	  open. Has config setting, and option in Gameplay options gump.

	* A few files: Added option to disable double right pathfinding move.
	  Option in gump and config.

	* Misc files: Namespace issues.

2002-08-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: correct windows Makefiles in EXTRA_DIST

2002-08-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Gump_manager.cc: fixed combat stats crash

2002-08-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/Makefile.am: no longer build ucdump
	* audio/Audio.cc: free -> delete[]
