@@ -34,7 +34,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #  pragma interface
 #endif
 
-#include "../Midi.h"
+#include "Midi.h"
 #include "exceptions.h"
 #include "SDL_thread.h"
 #include "SDL.h"
