@@ -1,3 +1,9 @@
+2002-08-09  Ryan Nunn  <triforce@merlin.net.au>
+	* audio/midi_drivers/fmopl_midi.*, audio/midi_drivers/fmopldrv.cc,
+	  gumps/AudioOptions_gump.cc : Fixing compiling issues
+	* audio/midi_drivers/Makefile.am: Added fmopl files to the makefile,
+	  but I'm not going to touch the configure script.
+
 2002-08-07  Ryan Nunn  <triforce@merlin.net.au>
 	* cheat_screen.cc : Added missing tqueue header.
 
